    syntax = "proto3";

    package com.example;
    option java_multiple_files = true;
    option java_package = "com.example";
    option java_outer_classname = "UserProto";

    message User {
        int64 id = 1;
        string name = 2;
        string email = 3;
    }

    message UserId {
        int64 id = 1;
    }

    message UserList {
        repeated User users = 1;
    }

    service UserService {
        rpc CreateUser (User) returns (User);
        rpc GetUser (UserId) returns (User);
        rpc UpdateUser (User) returns (User);
        rpc DeleteUser (UserId) returns (Response);
    }

    message Response{
    string message = 1;
    }